# lcls_naming_tool

./: .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: standard.yml
conda-recipe/: meta.yaml
docs/: release_notes.py
docs/source/: conf.py  index.rst
docs/source/upcoming_release_notes/: 6-Added_argparse_module_and_fixed_bugs.rst
lcls_naming_tool/: __init__.py  functional_component_taxon.json  fungible_element_taxon.json  lcls_naming_tool.py
lcls_naming_tool/taxons/: ccc_taxon.json  functional_component_taxon.json  fungible_element_taxon.json
lcls_naming_tool/tests/: conftest.py  test_cli.py
lcls_naming_tool/web/: app.py  ccc_taxon.json  functional_component_taxon.json  fungible_element_taxon.json  gunicorn_config.py  lcls_naming_tool.html  lcls_naming_tool.py  style.css  taxons
lcls_naming_tool/web/templates/: base.html  index.html
web/: lcls_naming_tool.html  lcls_naming_tool.js  style.css
